# triton-dotfiles

./: .gitignore  README.md  README_ja.md  pyproject.toml
documents/: CONFIGURATION.md  TUI.md
documents/development/: CLI_DESIGN_GUIDE.md  CLI_DESIGN_GUIDE_ja.md
extras/skills/: README.md
extras/skills/triton-config/: SKILL.md
skills/claude-code/: README.md
skills/claude-code/triton-config/: SKILL.md
tests/: __init__.py  test_config_roundtrip.py  test_direct_path.py  test_file_comparison_cache.py  test_pattern_matching.py  test_target_check_coverage.py  test_target_encrypt_files.py  test_target_ensure.py  test_target_list_filter.py  test_target_path_validation.py
triton_dotfiles/: __init__.py  __version__.py  cli.py  config.py  init_wizard.py  schema.py  utils.py  validation_display.py  version_check.py
triton_dotfiles/encryption/: __init__.py  dummy.py  real.py
triton_dotfiles/managers/: __init__.py  file_comparison_manager.py  file_manager.py  git_manager.py  hook_manager.py
triton_dotfiles/templates/: config-template.yml
triton_dotfiles/tui_textual/: __init__.py  app.py  constants.py
triton_dotfiles/tui_textual/adapters/: __init__.py  file_adapter.py
triton_dotfiles/tui_textual/screens/: __init__.py  main_screen.py  startup_screen.py
triton_dotfiles/tui_textual/styles/: main.tcss
triton_dotfiles/tui_textual/widgets/: __init__.py  content_viewer.py  dialogs.py  file_list.py  status_bar.py
